[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.5",
    "crewai-tools>=1.14.5",
    "fastapi>=0.136.1",
    "openai>=2.37.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.24",
    "uvicorn>=0.47.0",
]
